--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 07.04.2022 08:44:31</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 07.04.2022 09:11:40</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 7.4.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Medovník</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ořechový košíček s čokoládou  </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Maková bábovka</div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krémová polévka z bílých fazolí - v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krémová polévka z bílých fazolí - samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>350g Lasagne bolognese, tomatová omáčka, rukolový salát <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Pečené krůtí prso, kari omáčka, basmati rýže, čerstvá zelenina, koriandr <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Celer">9</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Butter cauliflower, restovaná pohanka, čerstvé bylinky <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +128,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a orechovym pestem, kari ze zeleneho hrachu, salatek 145</li><li>Peceny filet z cerstve prazmy s pecenymi rajcaty a orechovym pestem, kari ze zeleneho hrachu, salatek 175</li><li>Hovezi licka na cervenem vine a korenove zelenine, jasminova ryze, salatek 145</li><li>Jelitkovy prejt {vlastni vyroba} s kroupami a smazenou cibulkou, kysane zeli s cervenou repou {vlastni vyroba}, stouchane brambory {L} 145</li><li>Zapecene marocke lilky s cervenou cockou, rajcaty a cerstvym ovcim syrem,  kuskus, salatek {L} 145</li></ol>
+<ol><li>Peceny filet z cerstveho jihoceskeho kapra {prorezavany-bez kosti} se salsou z cerstvych rajcat a salotek, pecene brambory, salatek 145</li><li>Peceny filet z cerstve norske tresky se salsou z cerstvych rajcat a salotek, pecene brambory, salatek 175</li><li>Grilovany recky veprovy spiz suvlaki v chlebove placce, korenena ryze s cizrnou, okurkove tzatziki, salatek 145</li><li>Madarsky paprikas s husimi zaludky, paprikami a cabajskou klobasou, zemlove knedlicky {L} 145</li><li>Indicke birjany z basmati ryze s kvetakem a zeleninou, sazene vejce, okurkove tzatziki, salatek 145</li></ol>
 </td>
 </tr>
 </table>
