--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.04.2022 08:14:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.04.2022 08:44:32</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pátek, 08. 04. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Sýrová s kari a kuřecím masem</strong>
+<strong>Vývar se zeleninou a celestýnskými nudlemi</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát se slaninou, sýrem, vejcem a bagetkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							135,-
-						</span>
-</p>
-<p>
-<strong>Vepřová líčka na víně s rýží</strong>
+<strong>Krkovička na houbách s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							137,-
+						</span>
+</p>
+<p>
+<strong>Zapečené palačinky s tvarohem a ovocnou omáčkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							115,-
 						</span>
 </p>
 <p>
