--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.04.2022 08:44:32</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.04.2022 09:12:20</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -123,7 +123,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jihoceskeho kapra {prorezavany-bez kosti} se salsou z cerstvych rajcat a salotek, pecene brambory, salatek 145</li><li>Peceny filet z cerstve norske tresky se salsou z cerstvych rajcat a salotek, pecene brambory, salatek 175</li><li>Grilovany recky veprovy spiz suvlaki v chlebove placce, korenena ryze s cizrnou, okurkove tzatziki, salatek 145</li><li>Madarsky paprikas s husimi zaludky, paprikami a cabajskou klobasou, zemlove knedlicky {L} 145</li><li>Indicke birjany z basmati ryze s kvetakem a zeleninou, sazene vejce, okurkove tzatziki, salatek 145</li></ol>
+<ol><li>Peceny filet z cerstveho jihoceskeho pstruha s olivami a susenymi rajcaty, stredomorsky fusilli salat s cuketami, paprikami a rajcaty {L} 145</li><li>Peceny filet z cerstveho halibuta s olivami a susenymi rajcaty, stredomorsky fusilli salat s cuketami, paprikami a rajcaty {L} 169</li><li>Burrito s hovezim chilli con carne a ementalem, jasminova ryze, salatek {L} 145</li><li>Pecene prsicko supreme z farmarskeho kurete plnene listovym spenatem s holandskou goudou, cervene zeli na pomerancich, stouchane brambory s creme fraiche 175</li><li>Indicky dal z cervene cocky s listovym spenatem, zazvorem, rajcaty a cerstvym ovcim syrem, chlebove placky, salatek {L} 145 </li></ol>
 </td>
 </tr>
 </table>
