--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.04.2022 08:45:48</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.04.2022 09:12:11</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pondělí, 11. 04. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a celestýnskými nudlemi</strong>
+<strong>Kmínová se smaženým hráškem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Krkovička na houbách s rýží</strong>
+<strong>Uhlířské těstoviny s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Zapečené palačinky s tvarohem a ovocnou omáčkou</strong>
+<strong>Smažený holandský řízek s bramborovou kaší a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							115,-
+							137,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 11.4.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Čokoládový Pařížský dort </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Makovec s citrónovou polevou</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget, cena od </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Polévka z červené čočky se zázvorem a rajčaty v menu  <em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Polévka z červené čočky se zázvorem a rajčaty samostatně <em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí sweet chilli, karotka, ananas, jasmínová rýže, černý sezam <em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová krkovice, hořčičná omáčka, pečené grenaillle, čerstvé bylinky <em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Pohankové rizoto s pórkem a hráškem, parmazán, cherry rajčata <em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -85,7 +125,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jihoceskeho pstruha s olivami a susenymi rajcaty, stredomorsky fusilli salat s cuketami, paprikami a rajcaty {L} 145</li><li>Peceny filet z cerstveho halibuta s olivami a susenymi rajcaty, stredomorsky fusilli salat s cuketami, paprikami a rajcaty {L} 169</li><li>Burrito s hovezim chilli con carne a ementalem, jasminova ryze, salatek {L} 145</li><li>Pecene prsicko supreme z farmarskeho kurete plnene listovym spenatem s holandskou goudou, cervene zeli na pomerancich, stouchane brambory s creme fraiche 175</li><li>Indicky dal z cervene cocky s listovym spenatem, zazvorem, rajcaty a cerstvym ovcim syrem, chlebove placky, salatek {L} 145 </li></ol>
+<ol><li>Peceny filet z atlanticke makrely s krenovo-pazitkovou jogurtovou omackou, zeleninovy kuskus, salatek {L} 145</li><li>Peceny filet z cerstve norske tresky s krenovo-pazitkovou jogurtovou omackou, zeleninovy kuskus, salatek {L} 175</li><li>Nam prik ong – thajske veprove s rajcaty, tamarindem, chilli, koriandrem a krevetovou pastou, thajska lepkava ryze, salatek 145</li><li>Grilovane medailonky z irskeho hoveziho krku {angus} s restovanymi zampiony na cibulce, pecene brambory, salatek 175</li><li>Wrap s pecenym kvetakem, fazolemi, gaj coj a spetkou kari, krenovo-pazitkova jogurtova omacka, pecene brambory, salatek {L} 145</li></ol>
 </td>
 </tr>
 </table>
