--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.04.2022 10:14:29</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.04.2022 10:41:45</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -125,7 +125,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s krenovo-pazitkovou jogurtovou omackou, zeleninovy kuskus, salatek {L} 145</li><li>Peceny filet z cerstve norske tresky s krenovo-pazitkovou jogurtovou omackou, zeleninovy kuskus, salatek {L} 175</li><li>Nam prik ong – thajske veprove s rajcaty, tamarindem, chilli, koriandrem a krevetovou pastou, thajska lepkava ryze, salatek 145</li><li>Grilovane medailonky z irskeho hoveziho krku {angus} s restovanymi zampiony na cibulce, pecene brambory, salatek 175</li><li>Wrap s pecenym kvetakem, fazolemi, gaj coj a spetkou kari, krenovo-pazitkova jogurtova omacka, pecene brambory, salatek {L} 145</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s krenovo-pazitkovou jogurtovou omackou, zeleninovy kuskus, salatek {L} 145</li><li>Peceny filet z cerstve norske tresky s krenovo-pazitkovou jogurtovou omackou, zeleninovy kuskus, salatek {L} 175</li><li>Nam prik ong -pikantni thajske veprove s rajcaty, tamarindem, chilli, koriandrem a krevetovou pastou, thajska lepkava ryze, salatek 145</li><li>Grilovane medailonky z irskeho hoveziho krku {angus} s restovanymi zampiony na cibulce, pecene brambory, salatek 175</li><li>Wrap s pecenym kvetakem, fazolemi, gaj coj a spetkou kari, krenovo-pazitkova jogurtova omacka, pecene brambory, salatek {L} 145</li></ol>
 </td>
 </tr>
 </table>
